@@ -1,5 +1,3 @@
-# encoding: utf-8
-
 class AttachmentUploader < CarrierWave::Uploader::Base
   include UploaderHelper
 
