@@ -1,6 +1,7 @@
 Please view this file on the master branch, on stable branches it's out of date.
 
 v 8.11.0 (unreleased)
+  - Remove magic comments (`# encoding: UTF-8`) from Ruby files !5456 (winniehell)
   - Fix of 'Commits being passed to custom hooks are already reachable when using the UI'
   - Limit git rev-list output count to one in forced push check
   - Retrieve rendered HTML from cache in one request
